Hide .tns-nav to prevent excess whitespace

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -236,6 +236,10 @@
     margin-top: var.$work-slider-marg-top;
   }
 
+  .tns-nav {
+    display: none;
+  }
+
   &__slide {
     padding-right: var.$work-slider-slide-padding-right;
 
